feat: add pre-auth credential offer support
JSON serialize values in valkey cache. Fix bug with lost login in pre-auth flow.
Add temporary dummy service for proof handling wor-around. Will be removed after integration
with wallet-provider.

Signed-off-by: Bjorn Molin <extern.bjorn.molin@digg.se>