@@ -8,24 +8,20 @@ import com.google.zxing.client.j2se.MatrixToImageConfig;
 import com.google.zxing.client.j2se.MatrixToImageWriter;
 import com.google.zxing.common.BitMatrix;
 import com.google.zxing.qrcode.QRCodeWriter;
-import com.nimbusds.jwt.JWT;
-import com.nimbusds.jwt.PlainJWT;
-import com.nimbusds.jwt.SignedJWT;
 import com.nimbusds.oauth2.sdk.*;
 import com.nimbusds.oauth2.sdk.id.ClientID;
 import com.nimbusds.oauth2.sdk.id.State;
 import com.nimbusds.oauth2.sdk.pkce.CodeChallengeMethod;
 import com.nimbusds.oauth2.sdk.pkce.CodeVerifier;
-import com.nimbusds.oauth2.sdk.token.AccessToken;
-import com.nimbusds.oauth2.sdk.token.RefreshToken;
 import com.nimbusds.openid.connect.sdk.AuthenticationRequest;
 import com.nimbusds.openid.connect.sdk.Nonce;
-import com.nimbusds.openid.connect.sdk.OIDCTokenResponse;
-import com.nimbusds.openid.connect.sdk.OIDCTokenResponseParser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.MediaType;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.ui.ModelMap;
@@ -33,14 +29,14 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.SessionAttributes;
-import org.springframework.web.client.RestClient;
 import org.springframework.web.servlet.ModelAndView;
-import org.springframework.web.servlet.View;
-import org.springframework.web.servlet.view.RedirectView;
+import se.digg.eudiw.authentication.SwedenConnectPrincipal;
 import se.digg.eudiw.config.EudiwConfig;
 import se.digg.eudiw.model.credentialissuer.CredentialOfferParam;
+import se.digg.eudiw.model.credentialissuer.PendingPreAuthorization;
 import se.digg.eudiw.model.credentialissuer.TxCodeInputMode;
 import se.digg.eudiw.model.credentialissuer.TxCodeType;
+import se.digg.eudiw.service.CredentialOfferService;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -53,6 +49,7 @@ import java.util.*;
 @Controller
 @SessionAttributes("codeVerifier")
 public class PidPreAuthCredentialOfferController {
+    private final CredentialOfferService credentialOfferService;
     Logger logger = LoggerFactory.getLogger(PidPreAuthCredentialOfferController.class);
 
     final URI callbackUri;
@@ -60,18 +57,20 @@ public class PidPreAuthCredentialOfferController {
     final URI tokenEndpoint;
 
     Nonce nonce = new Nonce(); // move to request
-    CodeVerifier pkceVerifier = new CodeVerifier(); // move to request
+    Random rnd;
 
 	private EudiwConfig eudiwConfig;
 
-    PidPreAuthCredentialOfferController(@Autowired EudiwConfig eudiwConfig) {
+    PidPreAuthCredentialOfferController(@Autowired EudiwConfig eudiwConfig, @Autowired CredentialOfferService credentialOfferService) {
         logger.info("PreAuthController created");
         this.eudiwConfig = eudiwConfig;
 
         callbackUri = URI.create(String.format("%s/pid/preauth", eudiwConfig.getIssuerBaseUrl()));
         authzEndpoint = URI.create(String.format("%s/oauth2/authorize", eudiwConfig.getIssuerBaseUrl()));
         tokenEndpoint = URI.create(String.format("%s/oauth2/token", eudiwConfig.getIssuerBaseUrl()));
+        this.credentialOfferService = credentialOfferService;
 
+        rnd = new Random();
     }
 
     /**
@@ -126,15 +125,42 @@ public class PidPreAuthCredentialOfferController {
 
         QRCodeWriter qrCodeWriter = new QRCodeWriter();
 
-        CredentialOfferParam credentialOfferParam = new CredentialOfferParam(eudiwConfig.getIssuer(), List.of("eu.europa.ec.eudi.pid_mdoc", "eu.europa.ec.eudi.pid_jwt_vc_json"));
+        CredentialOfferParam credentialOfferParam = new CredentialOfferParam(eudiwConfig.getIssuer(), List.of("eu.europa.ec.eudi.pid_jwt_vc_json"));
         credentialOfferParam.setGrants(Map.of(se.digg.eudiw.model.credentialissuer.GrantType.PRE_AUTHORIZED_CODE, new se.digg.eudiw.model.credentialissuer.PreAuthorizationCodeGrant(codeParam.get(), eudiwConfig.getAuthHost(), new TxCodeType(TxCodeInputMode.NUMERIC, 6, "PIN"))));
+
+        SecurityContext context = SecurityContextHolder.getContext();
+        Authentication authentication = context.getAuthentication();
+        SwedenConnectPrincipal swedenConnectPrincipal = null;
+        Object principal = authentication.getPrincipal();
+        if (principal instanceof SwedenConnectPrincipal) {
+            swedenConnectPrincipal = (SwedenConnectPrincipal) principal;
+        }
+
+        if (swedenConnectPrincipal == null) {
+            throw new RuntimeException("TODO handle not authenticated");
+        }
+
+        int number = rnd.nextInt(999999);
+
+        String txCode = String.format("%06d", number);
+        PendingPreAuthorization pendingPreAuthorization = new PendingPreAuthorization(credentialOfferParam, callbackUri.toString(), pkceVerifier, clientID.getValue(), txCode, swedenConnectPrincipal);
+        credentialOfferService.store(code.getValue(), pendingPreAuthorization);
+
+        logger.info("Pending Credential offer: {}", pendingPreAuthorization);
+
+        Collection<? extends GrantedAuthority> authorities = authentication.getAuthorities();
 
         String jsonData = null;
         try {
 
             jsonData = new ObjectMapper().writeValueAsString(credentialOfferParam);
+            String uuid = UUID.randomUUID().toString();
+            credentialOfferService.store(uuid, credentialOfferParam);
 
-            String credOffer = String.format("openid-credential-offer://credential_offer?credential_offer=%s", URLEncoder.encode(jsonData, StandardCharsets.UTF_8));
+
+            //String credOffer = String.format("openid-credential-offer://credential_offer?credential_offer=%s", URLEncoder.encode(jsonData, StandardCharsets.UTF_8));
+            String credentialUrl = String.format("%s/credential_offer/%s", eudiwConfig.getIssuerBaseUrl(), uuid);
+            String credOffer = String.format("openid-credential-offer://credential_offer?credential_offer_uri=%s", URLEncoder.encode(credentialUrl, StandardCharsets.UTF_8));
             logger.info("Creating QR code for credential offer: {}", credOffer);
             BitMatrix bitMatrix = qrCodeWriter.encode(credOffer, BarcodeFormat.QR_CODE, 300, 300);
 
@@ -147,12 +173,10 @@ public class PidPreAuthCredentialOfferController {
 
             modelAndView.getModelMap().addAttribute("qrCode", String.format("data:image/jpeg;base64, %s", qrCode));
             modelAndView.getModelMap().addAttribute("linkUrl", credOffer);
+            modelAndView.getModelMap().addAttribute("txCode", txCode);
+
             return modelAndView;
-        } catch (JsonProcessingException e) {
-            throw new RuntimeException(e);
-        } catch (WriterException e) {
-            throw new RuntimeException(e);
-        } catch (IOException e) {
+        } catch (WriterException | IOException e) {
             throw new RuntimeException(e);
         }
     }
@@ -169,25 +193,25 @@ public class PidPreAuthCredentialOfferController {
           private final CodeVerifier pkceVerifier;
           private static final GrantType GRANT_TYPE = new GrantType("urn:ietf:params:oauth:grant-type:pre-authorized_code");
 
-          PreAuthCodeAuthorizationGrant(AuthorizationCode code, URI redirectURI, CodeVerifier pkceVerifier) {
-              super(GRANT_TYPE);
-              this.code = code;
-              this.redirectURI = redirectURI;
-              this.pkceVerifier = pkceVerifier;
-          }
+        PreAuthCodeAuthorizationGrant(AuthorizationCode code, URI redirectURI, CodeVerifier pkceVerifier) {
+            super(GRANT_TYPE);
+            this.code = code;
+            this.redirectURI = redirectURI;
+            this.pkceVerifier = pkceVerifier;
+        }
 
-          @Override
-          public Map<String, List<String>> toParameters() {
-              Map<String, List<String>> params = new LinkedHashMap();
-              params.put("grant_type", Collections.singletonList(GRANT_TYPE.getValue()));
-              params.put("pre-authorized_code", Collections.singletonList(this.code.getValue()));
-              params.put("code", Collections.singletonList(this.code.getValue()));
-              if (this.redirectURI != null) {
-                  params.put("redirect_uri", Collections.singletonList(this.redirectURI.toString()));
-                  params.put("code_verifier", List.of(pkceVerifier.getValue()));
-              }
+        @Override
+        public Map<String, List<String>> toParameters() {
+            Map<String, List<String>> params = new LinkedHashMap();
+            params.put("grant_type", Collections.singletonList(GRANT_TYPE.getValue()));
+            params.put("pre-authorized_code", Collections.singletonList(this.code.getValue()));
+            params.put("code", Collections.singletonList(this.code.getValue()));
+            if (this.redirectURI != null) {
+                params.put("redirect_uri", Collections.singletonList(this.redirectURI.toString()));
+                params.put("code_verifier", List.of(pkceVerifier.getValue()));
+            }
 
-              return params;
-          }
-      }
+            return params;
+        }
+    }
 }
